--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,5 @@
 .appWrapper {
+  position: relative;
   margin: 0 auto;
   height: 100vh;
   display: flex;
@@ -8,10 +9,22 @@
   justify-content: center;
   font-family: 'Josefin Sans', sans-serif;
   padding: 0 120px;
+  z-index: 2;
   @media screen and (max-width: 1270px) {
     flex-direction: column;
     gap: 10px;
     padding: 0;
     height: 100%;
   }
+}
+
+canvas{
+  position: fixed;
+  overflow: auto;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0.7;
+  z-index: 1;
 }
