--- a/src/Pages/Contacts/Contacts.module.scss
+++ b/src/Pages/Contacts/Contacts.module.scss
@@ -20,6 +20,7 @@
         opacity: 20%;
     }
     .contactsText{
+        padding-top: 10px;
         color: white;
         display: flex;
         flex-direction: column;
