--- a/src/Pages/AboutMe/AboutMe.module.scss
+++ b/src/Pages/AboutMe/AboutMe.module.scss
@@ -31,11 +31,12 @@
             text-decoration: none;
             .textAboutMe {
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 flex-wrap: nowrap;
                 align-items: flex-start;
                 justify-content: space-around;
-                gap: 150px;
+                gap: 10px;
+
                 @media screen and (max-width: 1270px) {
                     flex-wrap: wrap;
                     align-items: flex-start;
