--- a/src/Pages/Projects/Projects.module.scss
+++ b/src/Pages/Projects/Projects.module.scss
@@ -20,6 +20,7 @@
         opacity: 20%;
     }
     .projects{
+        padding-top: 10px;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
